--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Simple front-end for playing music. Built with React." />
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🎵</text></svg>" />
-    <title>Music Player</title>
+    <title>Mahoney Music Player</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
